--- a/game-development.html
+++ b/game-development.html
@@ -513,7 +513,7 @@
 										<div class="card card-flip">
 											<div class="card-front">
 												<div class="card-body game-img-body">
-													<img src="images/services/game-development/ios-game-development.webp" alt="Snow">
+													<img src="images/services/game-development/ios-game-development.webp" alt="iOS Game Developement">
 													<h4 class="game-bottom-left text-white">iOS Game Developement</h4>
 												</div>
 											</div>
@@ -528,7 +528,7 @@
 										<div class="card card-flip">
 											<div class="card-front">
 												<div class="card-body game-img-body">
-													<img src="images/services/game-development/android-game-development.webp" alt="Snow">
+													<img src="images/services/game-development/android-game-development.webp" alt="Android Game Development">
 													<h4 class="game-bottom-left text-white">Android Game Development</h4>
 												</div>
 											</div>
@@ -543,7 +543,7 @@
 										<div class="card card-flip">
 											<div class="card-front">
 												<div class="card-body game-img-body">
-													<img src="images/services/game-development/cross-platform-game-development.webp" alt="Snow">
+													<img src="images/services/game-development/cross-platform-game-development.webp" alt="Cross-Platform Game Development">
 													<h4 class="game-bottom-left text-white">Cross-Platform Game Development</h4>
 												</div>
 											</div>
@@ -562,7 +562,7 @@
 										<div class="card card-flip">
 											<div class="card-front">
 												<div class="card-body game-img-body">
-													<img src="images/services/game-development/unity-3d-game-development.webp" alt="Snow">
+													<img src="images/services/game-development/unity-3d-game-development.webp" alt="Unity 3D Game Development">
 													<h4 class="game-bottom-left text-white">Unity 3D Game Development</h4>
 												</div>
 											</div>
@@ -577,7 +577,7 @@
 										<div class="card card-flip">
 											<div class="card-front">
 												<div class="card-body game-img-body">
-													<img src="images/services/game-development/html-game-development.webp" alt="Snow">
+													<img src="images/services/game-development/html-game-development.webp" alt="HTML Games Development">
 													<h4 class="game-bottom-left text-white">HTML Games Development</h4>
 												</div>
 											</div>
@@ -592,7 +592,7 @@
 										<div class="card card-flip">
 											<div class="card-front">
 												<div class="card-body game-img-body">
-													<img src="images/services/game-development/unreal-engine-game-development.webp" alt="Snow">
+													<img src="images/services/game-development/unreal-engine-game-development.webp" alt="Unreal Engine Game Development">
 													<h4 class="game-bottom-left text-white">Unreal Engine Game Development</h4>
 												</div>
 											</div>
@@ -607,27 +607,48 @@
 							</div>
 							<div class="carousel-item">
 								<div class="row">
-									<div class="col-md-4 mb-3">
-										<div class="card">
-											<div class="card-body game-services-body">
-												<h4 class="text-center">Cocos2DX Game Development</h4>
-												<p class="card-text text-center">We create bespoke games for you using Cocos2d X's cross-platform features. Our skilled game developers employ cutting-edge technology to bring your idea to life on any platform. We have a lot of experience creating games with Cocos2d X and other mobile technologies. Our mobile game development firm offers various services to assist our clients in developing 2D games with the Cocos2d-X framework.</p>
+									<div class="col-md-4">
+										<div class="card card-flip">
+											<div class="card-front">
+												<div class="card-body game-img-body">
+													<img src="images/services/game-development/cocos-2dx-game-development.webp" alt="Cocos2DX Game Development">
+													<h4 class="game-bottom-left text-white">Cocos2DX Game Development</h4>
+												</div>
+											</div>
+											<div class="card-back">
+												<div class="card-body game-text-body my-auto">
+													<p class="card-text text-center text-white">We create bespoke games for you using Cocos2d X's cross-platform features. Our skilled game developers employ cutting-edge technology to bring your idea to life on any platform. We have a lot of experience creating games with Cocos2d X and other mobile technologies. Our mobile game development firm offers various services to assist our clients in developing 2D games with the Cocos2d-X framework.</p>
+												</div>
 											</div>
 										</div>
 									</div>
-									<div class="col-md-4 mb-3">
-										<div class="card">
-											<div class="card-body game-services-body">
-												<h4 class="text-center">Wearable Gaming</h4>
-												<p class="card-text text-center">Future Reality is a wearable gaming services company founded by a group of gaming fanatics, technologists, and enthusiastic individuals devoted to maximizing the potential of wearable technology. To introduce new methods to enjoy games, we use devices such as Google Glass, Fitbit, Oculus Rift, and others. We take pride in our expertise in wearables and in creating unique and beautiful wearable gaming experiences.</p>
+									<div class="col-md-4">
+										<div class="card card-flip">
+											<div class="card-front">
+												<div class="card-body game-img-body">
+													<img src="images/services/game-development/wearable-gaming-development.webp" alt="Wearable Gaming">
+													<h4 class="game-bottom-left text-white">Wearable Gaming</h4>
+												</div>
+											</div>
+											<div class="card-back">
+												<div class="card-body game-text-body my-auto">
+													<p class="card-text text-center text-white">Future Reality is a wearable gaming services company founded by a group of gaming fanatics, technologists, and enthusiastic individuals devoted to maximizing the potential of wearable technology. To introduce new methods to enjoy games, we use devices such as Google Glass, Fitbit, Oculus Rift, and others. We take pride in our expertise in wearables and in creating unique and beautiful wearable gaming experiences.</p>
+												</div>
 											</div>
 										</div>
 									</div>
-									<div class="col-md-4 mb-3">
-										<div class="card">
-											<div class="card-body game-services-body">
-												<h4 class="text-center">BuildBox Game Development</h4>
-												<p class="card-text text-center">BuildBox has created a new way of making video games. The free web-based game generator allows you to create the most sophisticated games with little to no code. We provide low-cost and quick BuildBox game development services. Within the Buildbox game engine, you will be given readymade solutions for all areas of game production, such as leaderboards, achievements, in-app purchases, and level progression.</p>
+									<div class="col-md-4">
+										<div class="card card-flip">
+											<div class="card-front">
+												<div class="card-body game-img-body">
+													<img src="images/services/game-development/build-box-game-development.webp" alt="BuildBox Game Development">
+													<h4 class="game-bottom-left text-white">BuildBox Game Development</h4>
+												</div>
+											</div>
+											<div class="card-back">
+												<div class="card-body game-text-body my-auto">
+													<p class="card-text text-center text-white">BuildBox has created a new way of making video games. The free web-based game generator allows you to create the most sophisticated games with little to no code. We provide low-cost and quick BuildBox game development services. Within the Buildbox game engine, you will be given readymade solutions for all areas of game production, such as leaderboards, achievements, in-app purchases, and level progression.</p>
+												</div>
 											</div>
 										</div>
 									</div>
@@ -817,7 +838,7 @@
 				<div class="col-lg-6 my-auto wow fadeInLeft">
 					<h2 class="common-heading mb10 text-white">AR Game Development</h2>
 					<p class="mb30 text-white">We are a full-service augmented reality game development company dedicated to making your AR gaming dreams a reality. We assist you in understanding how an AR game is made, what it takes to create a game and the business elements of owning an AR game. Our specialists have been building AR games for years and have worked with various game themes and concepts.</p>
-					<div class="mt-5 mt-md-3 game-button">
+					<div class="mt-5 game-button">
 						<a href="#" class="build-game-btn">Build Your Own Game</a>
 					</div>
 				</div>
@@ -836,11 +857,12 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-6 wow fadeInLeft">
 					<img src="images/services/game-development/vr-game-development-image.webp" alt="VR Game Development" class="game-img img-fluid">
+					<img src="images/services/game-development/vr-game-development-animation.webp" alt="VR Game Development" class="vr-game-development-animation img-fluid">
 				</div>
 				<div class="col-lg-6 my-auto wow fadeInRight">
 					<h2 class="common-heading mb10 text-white">VR Game Development</h2>
 					<p class="mb30 text-white">Our team specializes in immersive virtual reality game creation, VR simulation development, and mobile game development. We are a VR game development company that offers high-quality creative, and engaging VR gaming experiences. With hundreds of high-profile clients worldwide, we have the expertise to provide excellent consultation and development for your project.</p>
-					<div class="mt-5 mt-md-3 game-button">
+					<div class="mt-5 game-button">
 						<a href="#" class="build-game-btn">Build Your Own Game</a>
 					</div>
 				</div>
@@ -852,18 +874,33 @@
 	<!-- Start MR Game Section -->
 	<section class="mr-game-section py-3 py-md-3 py-lg-5">
 		<div class="container">
-			<div class="row justify-content-center">
+			<div class="row justify-content-center mb-5">
 				<div class="col-lg-6 my-auto wow fadeInLeft">
 					<h2 class="common-heading mb10 text-white">MR Game Development</h2>
 					<p class="mb30 text-white">We offer mixed reality game development services to assist you in creating the most awesome mixed reality games. We generate stunning graphics and high-quality 3D environments to provide your games with an immersive feel. We have worked on various projects, including indie games, online games, theme park installations, and MR productions. We collaborate with creative teams, marketers, and brands to create incredible experiences.</p>
-					<div class="mt-5 mt-md-3 game-button">
+					<div class="mt-5 game-button">
 						<a href="#" class="build-game-btn">Build Your Own Game</a>
 					</div>
 				</div>
 				<div class="col-lg-6 wow fadeInRight">
 					<img src="images/services/game-development/mr-game-development-image.webp" alt="Mr Game Development" class="game-img img-fluid">
+					<img src="images/services/game-development/mr-game-development-animation.webp" alt="Mr Game Development" class="mr-game-development-animation img-fluid">
 				</div>
 			</div>
+		</div>
+
+		<div class="row justify-content-center mt-5">
+			<div class="col-lg-6 wow fadeInUp my-auto">
+				<div class="hire-div">
+					<div class="hire-us">
+						<p class="text-white">Hire Top Mobile Game Developers for Building Immersive Games</p>
+						<p class="game-get-button mt-3">GET IN TOUCH</p>
+					</div>
+					<div class="hire-img">
+						<img src="images/services/game-development/hire-game-developer3.webp" alt="Custom App Service" class="img-fluid hire-game-developer2">
+					</div>
+				</div>
+			</div> 
 		</div>
 	</section>
 	<!-- End MR Game Section -->
