--- a/game-development.html
+++ b/game-development.html
@@ -836,7 +836,7 @@
 					<h2 class="common-heading text-white">2D Game Development</h2>
 					<p class="text-white">We are a one-stop source for 2D game development services. We create games that are engaging, entertaining, and of high quality. We have expertise working in various genres and practices like design, scripting, 2D art assets and implementation, audio implementation, and 3D asset integration. Our game development team takes your initial game concept to transform it into a one-of-a-kind 2D game for Android, iOS, web, or any other platform.</p>
 					<div class="mt-5 game-button">
-						<a href="#" class="build-game-btn">Build Your Own Game</a>
+						<a href="#">Build Your Own Game</a>
 					</div>
 				</div>
 				<div class="col-lg-6 wow fadeInRight">
@@ -859,7 +859,7 @@
 					<h2 class="common-heading mb10 text-white">3D Game Development</h2>
 						<p class="text-white">We think you deserve to create the best 3D game imaginable, and we employ an all-inclusive strategy to get you there faster. This implies that we provide all 3D game development services required to produce your 3D game, including art development, software development, and project planning. Our goal is to make games that you can be excited about. Our team members have extensive expertise in designing 3D games of many genres, from casual to violent.</p>
 					<div class="mt-5 game-button">
-						<a href="#" class="build-game-btn">Build Your Own Game</a>
+						<a href="#">Build Your Own Game</a>
 					</div>
 				</div>
 			</div>
@@ -889,11 +889,11 @@
 					<h2 class="common-heading mb10 text-white">AR Game Development</h2>
 					<p class="mb30 text-white">We are a full-service augmented reality game development company dedicated to making your AR gaming dreams a reality. We assist you in understanding how an AR game is made, what it takes to create a game and the business elements of owning an AR game. Our specialists have been building AR games for years and have worked with various game themes and concepts.</p>
 					<div class="mt-5 game-button">
-						<a href="#" class="build-game-btn">Build Your Own Game</a>
+						<a href="#">Build Your Own Game</a>
 					</div>
 				</div>
 				<div class="col-lg-6 wow fadeInRight">
-					<img src="images/services/game-development/ar-game-development-image.webp" alt="AR Game Development" class="game-img img-fluid">
+					<img src="images/services/game-development/ar-game-development-image.webp" alt="AR Game Development" class="ar-game-development-image img-fluid">
 					<img src="images/services/game-development/ar-game-development-animation.webp" alt="AR Game Development" class="ar-game-development-animation img-fluid">
 				</div>
 			</div>
@@ -906,14 +906,14 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-6 wow fadeInLeft">
-					<img src="images/services/game-development/vr-game-development-image.webp" alt="VR Game Development" class="game-img img-fluid">
+					<img src="images/services/game-development/vr-game-development-image.webp" alt="VR Game Development" class="vr-game-development-image img-fluid">
 					<img src="images/services/game-development/vr-game-development-animation.webp" alt="VR Game Development" class="vr-game-development-animation img-fluid">
 				</div>
 				<div class="col-lg-6 my-auto wow fadeInRight">
 					<h2 class="common-heading mb10 text-white">VR Game Development</h2>
 					<p class="mb30 text-white">Our team specializes in immersive virtual reality game creation, VR simulation development, and mobile game development. We are a VR game development company that offers high-quality creative, and engaging VR gaming experiences. With hundreds of high-profile clients worldwide, we have the expertise to provide excellent consultation and development for your project.</p>
 					<div class="mt-5 game-button">
-						<a href="#" class="build-game-btn">Build Your Own Game</a>
+						<a href="#">Build Your Own Game</a>
 					</div>
 				</div>
 			</div>
@@ -929,11 +929,11 @@
 					<h2 class="common-heading mb10 text-white">MR Game Development</h2>
 					<p class="mb30 text-white">We offer mixed reality game development services to assist you in creating the most awesome mixed reality games. We generate stunning graphics and high-quality 3D environments to provide your games with an immersive feel. We have worked on various projects, including indie games, online games, theme park installations, and MR productions. We collaborate with creative teams, marketers, and brands to create incredible experiences.</p>
 					<div class="mt-5 game-button">
-						<a href="#" class="build-game-btn">Build Your Own Game</a>
+						<a href="#">Build Your Own Game</a>
 					</div>
 				</div>
 				<div class="col-lg-6 wow fadeInRight">
-					<img src="images/services/game-development/mr-game-development-image.webp" alt="Mr Game Development" class="game-img img-fluid">
+					<img src="images/services/game-development/mr-game-development-image.webp" alt="Mr Game Development" class="mr-game-development-image img-fluid">
 					<img src="images/services/game-development/mr-game-development-animation.webp" alt="Mr Game Development" class="mr-game-development-animation img-fluid">
 				</div>
 			</div>
@@ -1018,7 +1018,7 @@
 	<!--End Case Studies-->
 
 	<!-- Start Game Section -->
-	<section class="game-development-section py-3 py-md-3 py-lg-5">
+	<!-- <section class="game-development-section py-3 py-md-3 py-lg-5">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-sm-10 my-auto">
@@ -1037,70 +1037,70 @@
 							<img src="images/services/game-development/causal-game.webp" alt="Causal Game" class="game-development-img">
 							<div class="games-bottom-left">
 								<img src="images/services/game-development/casual-icon.png" alt="Causal Icon" class="game-development-icon">
-								Casual
+								<p class="pt-1">Casual</p>
 							</div>
 						</div>
 						<div class="col game-dev">
 							<img src="images/services/game-development/action-game.webp" alt="Causal Game" class="game-development-img">
 							<div class="games-bottom-left">
 								<img src="images/services/game-development/action-icon.png" alt="Causal Icon" class="game-development-icon">
-								Action
+								<p class="pt-1">Action</p>
 							</div>
 						</div>
 						<div class="col game-dev">
 							<img src="images/services/game-development/arcade-game.webp" alt="Causal Game" class="game-development-img">
 							<div class="games-bottom-left">
 								<img src="images/services/game-development/arcade-icon.png" alt="Causal Icon" class="game-development-icon">
-								Arcade
+								<p class="pt-1">Arcade</p>
 							</div>
 						</div>
 						<div class="col game-dev">
 							<img src="images/services/game-development/adventure-game.webp" alt="Causal Game" class="game-development-img">
 							<div class="games-bottom-left">
 								<img src="images/services/game-development/adventure-icon.png" alt="Causal Icon" class="game-development-icon">
-								Adventure
+								<p class="pt-1">Adventure</p>
 							</div>
 						</div>
 						<div class="col game-dev">
 							<img src="images/services/game-development/puzzle-game.webp" alt="Causal Game" class="game-development-img">
 							<div class="games-bottom-left">
 								<img src="images/services/game-development/puzzle-icon.png" alt="Causal Icon" class="game-development-icon">
-								Puzzle
+								<p class="pt-1">Puzzle</p>
 							</div>
 						</div>
 						<div class="col game-dev">
 							<img src="images/services/game-development/multiplayer-game.webp" alt="Causal Game" class="game-development-img">
 							<div class="games-bottom-left">
 								<img src="images/services/game-development/multiplayer-icon.png" alt="Causal Icon" class="game-development-icon">
-								Multiplayer
+								<p class="pt-1">Multiplayer</p>
 							</div>
 						</div>
 						<div class="col game-dev">
 							<img src="images/services/game-development/racing-game.webp" alt="Causal Game" class="game-development-img">
 							<div class="games-bottom-left">
 								<img src="images/services/game-development/racing-icon.png" alt="Causal Icon" class="game-development-icon">
-								Racing
+								<p class="pt-1">Racing</p>
 							</div>
 						</div>
 						<div class="col game-dev">
 							<img src="images/services/game-development/sports-game.webp" alt="Causal Game" class="game-development-img">
 							<div class="games-bottom-left">
 								<img src="images/services/game-development/sports-icon.png" alt="Causal Icon" class="game-development-icon">
-								Sports
+								<p class="pt-1">Sports</p>
 							</div>
 						</div>
 						<div class="col game-dev">
 							<img src="images/services/game-development/combact-game.webp" alt="Causal Game" class="game-development-img">
 							<div class="games-bottom-left">
 								<img src="images/services/game-development/combact-icon.png" alt="Causal Icon" class="game-development-icon">
-								Combact
+								<p class="pt-1">Combact</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- End Game Section -->
 
     <!-- Start Services -->
@@ -1475,7 +1475,7 @@
 				<div class="col-lg-6 wow fadeInLeft">
 					<img src="images/services/game-development/offline-multiplayer-game-development.webp" alt=" Offline Multiplayer Game" class="img-fluid"> 
 				</div>
-				<div class="col-lg-6 my-auto wow fadeInRight">
+				<div class="col-lg-6 my-auto wow fadeInRight pt-4 pt-sm-4 pt-md-0">
 					<div class="common-heading text-l">
 						<h2 class="common-heading mb10">Offline Multiplayer Games</h2>
 						<p>We operate in every area of game creation, making high offline multiplayer games while utilizing cutting-edge technology and attraction and retention strategies. Our skilled game designers can create offline solid multiplayer games for PC, Mac, and mobile devices. Our services are designed to meet each of our client's specific requirements.</p>
@@ -1503,7 +1503,7 @@
 						<a href="#">Build Your Own Game</a>
 					</div>
 				</div>
-				<div class="col-lg-6 wow fadeInRight">
+				<div class="col-lg-6 wow fadeInRight pt-4 pt-sm-4 pt-md-0">
 					<img src="images/services/game-development/game-ui-ux-design-development.webp" alt="Game UI/UX Design" class="img-fluid"> 
 				</div>
 			</div>
@@ -1518,7 +1518,7 @@
 				<div class="col-lg-6 wow fadeInLeft">
 					<img src="images/services/game-development/game-character-creation-development.webp" alt="Game Character Creation" class="img-fluid"> 
 				</div>
-				<div class="col-lg-6 my-auto wow fadeInRight">
+				<div class="col-lg-6 my-auto wow fadeInRight pt-4 pt-sm-4 pt-md-0">
 					<div class="common-heading text-l">
 						<h2 class="common-heading mb10">Game Character Creation</h2>
 						<p>In today's competitive gaming world, we provide high-quality game character development services to businesses that demand a particular skill set. Our staff assists you in honing your concept and developing unique characters that will instantly improve the admirable quality of your project. We help you launch your next successful game by creating characters that bring it to players' lives.</p>
@@ -1545,7 +1545,7 @@
 						<a href="#">Build Your Own Game</a>
 					</div>
 				</div>
-				<div class="col-lg-6 wow fadeInRight">
+				<div class="col-lg-6 wow fadeInRight pt-4 pt-sm-4 pt-md-0">
 					<img src="images/services/game-development/mobile-game-art-asset-creation-development.webp" alt="Mobile Game Art And Asset Creation Game" class="img-fluid"> 
 				</div>
 			</div>
@@ -2731,40 +2731,40 @@
 										<div class="col-sm-6 col-md-6 col-lg-4">
 											<div class="card">
 												<div class="card-body">
-													<img src="images/home/web-developers.webp" class="img-fluid d-block mx-auto" alt="Web">
-													<p class="text-center pt-2">Hire Web Developers</p>
+													<img src="images/tech/apple-logo.webp" class="img-fluid d-block mx-auto" alt="Apple">
+													<p class="text-center pt-2">Hire iOS Game Developers</p>
 												</div>
 											</div>
 										</div>
 										<div class="col-sm-6 col-md-6 col-lg-4 mt-3 mt-sm-0">
 											<div class="card">
 												<div class="card-body">
-													<img src="images/home/mobile-app-developer.webp" class="img-fluid d-block mx-auto" alt="App">
-													<p class="text-center pt-2">Hire App Developers</p>
+													<img src="images/tech/android-logo.webp" class="img-fluid d-block mx-auto" alt="Game">
+													<p class="text-center pt-2">Hire Android Game Developers</p>
 												</div>
 											</div>
 										</div>
 										<div class="col-sm-6 col-md-6 col-lg-4 mt-3 mt-lg-0">
 											<div class="card">
 												<div class="card-body">
-													<img src="images/tech/wordpress-logo.webp" class="img-fluid d-block mx-auto" alt="WordPress">
-													<p class="text-center pt-2">Hire WordPress Developers</p>
+													<img src="images/tech/unity-logo.webp" class="img-fluid d-block mx-auto" alt="Unity">
+													<p class="text-center pt-2">Hire Unity Game Developers</p>
 												</div>
 											</div>
 										</div>
 										<div class="col-sm-6 col-md-6 col-lg-4 mt-3">
 											<div class="card">
 												<div class="card-body">
-													<img src="images/tech/php-logo.webp" class="img-fluid d-block mx-auto" alt="PHP">
-													<p class="text-center pt-2">Hire PHP Developers</p>
+													<img src="images/tech/html-logo.webp" class="img-fluid d-block mx-auto" alt="HTML">
+													<p class="text-center pt-2">Hire HTML Game Developers</p>
 												</div>
 											</div>
 										</div>
 										<div class="col-sm-6 col-md-6 col-lg-4 mt-3">
 											<div class="card">
 												<div class="card-body">
-													<img src="images/tech/angular-logo.webp" class="img-fluid d-block mx-auto" alt="Angular">
-													<p class="text-center pt-2">Hire Angularjs Developers</p>
+													<img src="images/tech/unreal-engine-logo.webp" class="img-fluid d-block mx-auto" alt="Unreal Engine">
+													<p class="text-center pt-2">Hire Unreal Engine Game Developers</p>
 												</div>
 											</div>
 										</div>
